# oscar

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml
deploy/: docker-compose.yml  oscar.service
oscar/: cli.py  config.py  db.py  log.py
oscar/auth/: cookie_store.py  health_check.py  manual_login.py  refresh_auth.py
oscar/client/: endpoints.py  models.py  session.py  token_parser.py
oscar/monitor/: poller.py  state.py
oscar/notify/: __init__.py  base.py  pushover.py
oscar/registrar/: register.py  verify.py
scripts/: fix_venv_pth.sh  refresh_auth.sh  strip_har.py
tests/: conftest.py  test_client.py  test_cookie_store.py  test_monitor_poller.py  test_monitor_state.py
